Fixed smaller cells moving out of alignment

--- a/index.css
+++ b/index.css
@@ -32,8 +32,10 @@
 }
 .grid-row{
     box-sizing: border-box;
+    display: flex;
 }
 .cell{
+    flex: 1;
     height: 100%;
     display: inline-block;
     box-sizing: border-box;
